WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87636
[EFL] Compilation warning in DumpRenderTreeView.cpp
https://bugs.webkit.org/show_bug.cgi?id=87636
Summary
[EFL] Compilation warning in DumpRenderTreeView.cpp
Chris Dumez
Reported
2012-05-28 01:43:17 PDT
We get the following compilation warning on the build bot: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Tools/DumpRenderTree/efl/DumpRenderTreeView.cpp:135:36: warning: format ‘%llu’ expects argument of type ‘long long unsigned int’, but argument 5 has type ‘int64_t {aka long int}’ [-Wformat]
Attachments
Patch
(1.67 KB, patch)
2012-05-28 01:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.17 KB, patch)
2012-05-28 02:45 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-28 01:44:42 PDT
Created
attachment 144304
[details]
Patch
Gyuyoung Kim
Comment 2
2012-05-28 02:11:29 PDT
Comment on
attachment 144304
[details]
Patch Looks fine. By the way, don't you need to fix return type as well ? static *int64_t* onExceededApplicationCacheQuota ?
Chris Dumez
Comment 3
2012-05-28 02:41:31 PDT
(In reply to
comment #2
)
> (From update of
attachment 144304
[details]
) > Looks fine. By the way, don't you need to fix return type as well ? > > static *int64_t* onExceededApplicationCacheQuota ?
It makes sense.
Chris Dumez
Comment 4
2012-05-28 02:45:14 PDT
Created
attachment 144310
[details]
Patch
Gyuyoung Kim
Comment 5
2012-05-28 03:53:55 PDT
Comment on
attachment 144310
[details]
Patch Looks good to me now.
Raphael Kubo da Costa (:rakuco)
Comment 6
2012-05-28 06:39:27 PDT
Comment on
attachment 144310
[details]
Patch Looks good, thanks.
WebKit Review Bot
Comment 7
2012-05-29 00:51:40 PDT
Comment on
attachment 144310
[details]
Patch Clearing flags on attachment: 144310 Committed
r118729
: <
http://trac.webkit.org/changeset/118729
>
WebKit Review Bot
Comment 8
2012-05-29 00:51:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug