[EFL] Compilation warning in DumpRenderTreeView.cpp https://bugs.webkit.org/show_bug.cgi?id=87636

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-29
Reviewed by Filip Pizlo.

Source/WebKit/efl:

Fix return type of exceeded_application_cache_quota callback, it
should be int64_t, not uint64_t.

* ewk/ewk_view.h:

Tools:

Fix compilation error in DumpRenderTreeView.cpp due to wrong format
specifier in printf. Also fix the return type for
onExceededApplicationCacheQuota callback.

* DumpRenderTree/efl/DumpRenderTreeView.cpp:
(onExceededApplicationCacheQuota):

Canonical link: https://commits.webkit.org/105471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118729 268f45cc-cd09-0410-ab3c-d52691b4dbfc